bug-fix:mail actions gap

--- a/assets/style/cmps/MailACtions.css
+++ b/assets/style/cmps/MailACtions.css
@@ -1,5 +1,5 @@
 .mail-actions {
  grid-auto-flow: column;
  align-items: center;
- max-width: 50%;
+ gap: 0.5rem;
 }
